styles/index.scss
$main-font: 'Source Sans Pro', sans-serif;
$logo-font: 'Baloo 2', cursive;

body{
    width: 100%;
    height: 100vh;
}


.logo{
    font-family: $logo-font;
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    line-height: 36px;
    letter-spacing: -0.25px;
    margin: 30px;
}

header {
    width: 100%;
    height: 5vh;
    font-family: $main-font;
    
}

.layout__header {
    max-width: 1000px;
    width: 100%;
    display: flex;
    // flex-direction: row;
    // align-items: center;
    // justify-content: center;
}

.nav{
    max-width: 800px;
    display: flex;
    min-height: 10vh;
    justify-content: space-around;
    // align-items: center;
    // flex-wrap: wrap;

    ul{
        display:flex ;
        justify-content: space-evenly;
    }

    &__list {
        width: 100%;
        // display: flex;
        list-style: none;
        // justify-content: space-evenly;
        align-items: center;
        flex-direction: row;
        margin: 10px;
        
    }

    &_li{
        list-style: none;
        display: flex;
        flex-direction: row;
        margin: 15px;
    }

    &_link{
        text-decoration: none;
        font-size: 20px;
        color: black;
    }

    &_link:hover {
        color: coral;
    }
}

.layout_main{
    max-width: 1400px;
    width: 100%;
    padding: 25px;
    margin: 25px;
    display: flex;
    justify-content: space-evenly;
}


main {
    width: 100%;
    min-height: 100vh;
    font-family: $main-font;
    font-style: normal;
    font-weight: normal;
    font-size: 22px;
    line-height: 33px;
    display: flex;
    justify-content: center;
}


.main_content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    flex-wrap: wrap;

    .main_heading{
        font-weight: 500;
        font-size: 90px;
        line-height: 102px;
        letter-spacing: -2px;
    }

    .main_info{
        max-width: 410px;
        min-height: 98px;
    }
}

.main_image{
    align-self: center;
}

footer{
    width: 100%;
    min-height: 5vh;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
}

.icon{
    margin: 25px;
    padding: 25px;

}

@media screen and (max-width:1000px){

    .layout_main{
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
        min-height: 100vh;
    }

    .main_content{
        max-width: 574px;
        min-height: 172px;
    }

    .main_image{
        align-self: flex-end;
    }
    
}

@media screen and (max-width:400px) {
    .main_heading{color: coral;
    }    

}

@media screen and (max-width:400px) {

    header{
        .nav_list{
        display: none;
        }
    }
}

